# telemetryflow-hermes

./: .bandit  .env.example  .gitignore  .gitlab-ci.yml  .trivyignore.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SOUL.md  config.yaml  docker-compose.yaml  docker-entrypoint.py  pyproject.toml  run-container.sh
.github/workflows/: ci.yml  docker.yml  release.yml
cron/: jobs.json
docs/: README.md  architecture.md  getting-started.md  render-slides.sh  tfo-hermes-v1.0.0.md  tfo-hermes-v1.2.0.md  tfo-hermes.md
docs/agents/: README.md  investigator.md  remediator.md  reviewer.md  triage.md
docs/api/: README.md  authentication.md  context-types.md  llm-module.md
docs/configuration/: README.md  environment.md
docs/deployment/: README.md  air-gapped.md  standard.md
docs/operations/: README.md  cron-jobs.md  hooks.md  troubleshooting.md
docs/security/: README.md  clickhouse-readonly.md
docs/skills/: README.md  reference.md
docs/tools/: README.md  reference.md
hooks/: on-alert-fired.sh  post-remediation.sh  pre-investigation.sh
memories/: MEMORY.md  USER.md
plugins/telemetryflow/: plugin.yaml
profiles/investigator/: SOUL.md  config.yaml
profiles/remediator/: SOUL.md  config.yaml
profiles/reviewer/: SOUL.md  config.yaml
scripts/: deploy-air-gapped.sh  install.sh  setup-profiles.sh  setup-telegram.sh  verify-pipeline.sh
security/: clickhouse-readonly.sql  setup-readonly-user.sh
telemetryflow_hermes.egg-info/: PKG-INFO  SOURCES.txt
tests/: __init__.py  conftest.py
(+142 files in other folders)
