[project]
name = "telemetryflow-hermes"
version = "2.0.0"
description = "Self-improving AI agent integration for TelemetryFlow Observability Platform"
requires-python = ">=3.8"
license = "Apache-2.0"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["plugins*"]
exclude = ["tests*", "logs*", "cron*", "hooks*", "skills*", "security*", "sessions*", "profiles*", "memories*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require TFO Platform running)",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["plugins/telemetryflow/tools"]
omit = [
    "tests/*",
]

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.:",
    "pass",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["E501", "SIM117"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
